--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,10 @@
 body {
     text-align:  center;
     font-family: Arial, Helvetica, sans-serif;
-    color: crimson;
+    color: white;
 }
 
 .container {
-    background-color: aqua;
+    background-color: #b94646;
     border:  1px solid black;
 }
